[package]
name = "fre-sys"
version = "0.2.0"
edition = "2024"

authors = ["Frashack <reeceyao@qq.com>"]
description = "Rust bindings for the AIR Native Extension (ANE) C API (`FlashRuntimeExtensions.h`)."
links = "FlashRuntimeExtensions"
license = "MIT OR Apache-2.0"
readme = "README.md"

categories = ["external-ffi-bindings"]
keywords = ["fre", "ane", "air", "flash", "ffi"]

homepage = "https://crates.io/crates/fre-sys"
documentation = "https://docs.rs/fre-sys"
repository = "https://github.com/frashack/fre-sys"

include = [
    "src/**",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[package.metadata.docs.rs]
targets = [
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
]
default-target = "x86_64-pc-windows-msvc"

[dependencies]